Add logo && change background
  - Added styled logo
  - Changed background image from url to file

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   </head>
   <body>
     <section>
-      <div class="logo"></div>
       <figure>
-        <img src="https://images.unsplash.com/photo-1686763963223-e4338403f25f?q=80&w=2127&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Fjord by Jacob Meissner" width="640" height="1137">
-        <figcaption>Photo by <a href="https://unsplash.com/@jme1007?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jacob Meissner</a> on <a href="https://unsplash.com/photos/a-large-body-of-water-surrounded-by-mountains-yvYL1Zdq6i4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        <img src="./img/liz-a-YgrXd2DL5Po-unsplash.jpg" alt="Fjord by Jacob Meissner" width="640" height="1137">
+        <figcaption>Photo by <a href="https://unsplash.com/@flowerandleaves?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Liz A</a> on <a href="https://unsplash.com/photos/a-large-body-of-water-surrounded-by-mountains-YgrXd2DL5Po?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </a>
         </figcaption>
-    </figure>
+      </figure>
+      <div class="logo">
+        <h1><img src="./assets/odin-lined.png" alt="" width="90rem" >ODIN</h1>
+      </div>
     </section>
     <aside class="form">
       <p class="form-para">
@@ -25,7 +28,9 @@
       <p class="form-para">You <em>know</em> you want to.</p>
       <form action="post">
         <div class="container">
-          <legend>Let's do this</legend>
+          <p>
+            <legend>Let's do this</legend>
+          </p>
           <p>
             <label for="first-name"><span>first name</span></label
             ><input type="text" id="first-name" name="first_name" minlength="2" required/>
