Add main section style and layout
Added various styling and layout for:
  - Paragraphs
  - Form
  - Button
  - Links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
     <section>
       <figure>
-        <img src="./img/liz-a-YgrXd2DL5Po-unsplash.jpg" alt="Fjord by Jacob Meissner" width="640" height="1137">
         <figcaption>Photo by <a href="https://unsplash.com/@flowerandleaves?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Liz A</a> on <a href="https://unsplash.com/photos/a-large-body-of-water-surrounded-by-mountains-YgrXd2DL5Po?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </a>
         </figcaption>
@@ -26,7 +25,7 @@
         Sing up <em>now</em> to get started.
       </p>
       <p class="form-para">You <em>know</em> you want to.</p>
-      <form action="post">
+      <form action="" method="post">
         <div class="container">
           <p>
             <legend>Let's do this</legend>
@@ -62,9 +61,9 @@
             />
           </p>
         </div>
-        <p>
+        <p class="button-para">
           <button type="submit">Create Account</button>
-          <p>Already have an account? <a href="#">Log in</a></p>
+          <p class="button-para">Already have an account? <a href="#">Log in</a></p>
         </p>
       </form>
     </aside>
