--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
           </p>
           <p>
             <label for="first-name"><span>first name</span></label
-            ><input type="text" id="first-name" name="first_name" minlength="2" required/>
+            ><input type="text" id="first-name" name="first_name" minlength="2" spellcheck="false" required/>
           </p>
           <p>
             <label for="last-name"><span>last name</span></label
-            ><input type="text" id="last-name" name="last_name" />
+            ><input type="text" id="last-name" name="last_name" spellcheck="false" />
           </p>
           <p>
             <label for="email"><span>email</span></label
-            ><input type="email" id="email" name="user_email" placeholder="thor@odinson.com" required/>
+            ><input type="email" id="email" name="user_email" placeholder="thor@odinson.com" spellcheck="false" required/>
           </p>
           <p>
             <label for="phone"><span>phone number</span></label
